Fixed #22 by refactored code for 1.20.6 and higher. Fixed #21, #20, #18 by updating internal client side database. Added additional test cases.

--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -1,12 +1,10 @@
 plugins {
-  id 'idea'
   id 'maven-publish'
-  id 'net.neoforged.gradle.userdev' version '7.0.41'
-  id 'java-library'
+  id 'net.neoforged.gradle.userdev' version '7.0.116'
   id 'com.matthewprenger.cursegradle' version '1.4.0'
   id 'nu.studer.credentials' version '3.0'
   id "com.modrinth.minotaur" version "2.+"
-  id 'com.github.johnrengelman.shadow' version '7.1.2'
+  id 'com.gradleup.shadow' version '8.3.0'
 }
 
 base {
