--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -1,23 +1,13 @@
-buildscript {
-  repositories {
-    maven { url = 'https://maven.minecraftforge.net' }
-    mavenCentral()
-  }
-}
-
 plugins {
-  id 'idea'
-  id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
+  id 'maven-publish'
+  id 'net.minecraftforge.gradle' version '[6.0.24,6.2)'
   id 'com.matthewprenger.cursegradle' version '1.4.0'
   id 'nu.studer.credentials' version '3.0'
   id "com.modrinth.minotaur" version "2.+"
-  id 'com.github.johnrengelman.shadow' version '7.1.2'
+  id 'com.gradleup.shadow' version '8.3.0'
 }
 
-apply plugin: 'java'
 apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
 
 archivesBaseName = "${mod_id}-forge-${minecraft_version}"
 
@@ -95,6 +85,9 @@ dependencies {
   // Extra libraries
   shade 'com.moandjiezana.toml:toml4j:0.7.2'
   shade 'com.github.zafarkhaja:java-semver:0.9.0'
+
+  // Hack fix for now, force jopt-simple to be exactly 5.0.4 because Mojang ships that version, but some transitive dependencies request 6.0+
+  implementation('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
 }
 
 tasks.withType(JavaCompile).configureEach {
