--- a/NeoForge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/NeoForge/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[1,)"
+loaderVersion = "[2,)"
 license = "MIT"
 issueTrackerURL = "https://github.com/MarkusBordihn/BOs-Mods-Optimizer/issues"
 
@@ -12,17 +12,18 @@ logoFile = "logo.png"
 credits = ""
 authors = "Markus Bordihn"
 description = '''Automatic and realtime server bundling (one mod pack for client/server) and mod clean up for better performance and less crashes.'''
+displayTest = "NONE"
 
 [[dependencies.mods_optimizer]]
 modId = "neoforge"
 mandatory = true
-versionRange = "[1,)"
+versionRange = "[2,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.mods_optimizer]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.20.4,1.21)"
+versionRange = "[1.20.6,1.21)"
 ordering = "NONE"
 side = "BOTH"
