--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,18 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=2.0.0
+version=2.1.0
 group=de.markusbordihn.modsoptimizer
 vendor_name=markusbordihn
 # Common
-minecraft_version=1.20.4
+minecraft_version=1.20.6
 # Forge
-forge_version=49.0.13
+forge_version=50.1.12
 # Fabric
-fabric_version=0.91.2+1.20.4
-fabric_loader_version=0.15.0
+fabric_version=0.100.8+1.20.6
+fabric_loader_version=0.15.11
 # NeoForge
-neoforge_version=20.4.29-beta
-neoforge_loader_version_range=[1,)
+neoforge_version=20.6.119
 # Mod
 mod_id=mods_optimizer
 mod_name=Mods Optimizer
